--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,4 +6,52 @@
         xmlns:local="clr-namespace:albion_avalon"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="2*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <ScrollViewer Grid.Column="0">
+            <StackPanel x:Name="ListOfZones"/>
+        </ScrollViewer>
+        <StackPanel Grid.Column="1">
+            <TextBlock Height="20" Text="Zone Name:"/>
+            <TextBlock Height="20" Text="Connected Zone(Decay Time in hh:mm)"/>
+            <TextBlock Height="20" Text="(only fill in as many as there are portals)"/>
+            <TextBlock Height="20" Text="First Portal Leads To:"/>
+            <TextBlock Height="20" Text="And Will Decay In:"/>
+            <TextBlock Height="20" Text="Second Portal Leads To:"/>
+            <TextBlock Height="20" Text="And Will Decay In:"/>
+            <TextBlock Height="20" Text="Third Portal Leads To:"/>
+            <TextBlock Height="20" Text="And Will Decay In:"/>
+            <TextBlock Height="20" Text="Fourth Portal Leads To:"/>
+            <TextBlock Height="20" Text="And Will Decay In:"/>
+            <TextBlock Height="20" Text="Fifth Portal Leads To:"/>
+            <TextBlock Height="20" Text="And Will Decay In:"/>
+            <TextBlock Height="20" Text="Sixth Portal Leads To:"/>
+            <TextBlock Height="20" Text="And Will Decay In:"/>
+        </StackPanel>
+        <StackPanel Grid.Column="2">
+            <TextBox Height="20" x:Name="ZoneNameBox"/>
+            <TextBlock Height="20"/>
+            <TextBlock Height="20"/>
+            <TextBox Height="20" x:Name="FirstPortalNameBox"/>
+            <TextBox Height="20" x:Name="FirstPortalDecayBox"/>
+            <TextBox Height="20" x:Name="SecondPortalNameBox"/>
+            <TextBox Height="20" x:Name="SecondPortalDecayBox"/>
+            <TextBox Height="20" x:Name="ThirdPortalNameBox"/>
+            <TextBox Height="20" x:Name="ThirdPortalDecayBox"/>
+            <TextBox Height="20" x:Name="FourthPortalNameBox"/>
+            <TextBox Height="20" x:Name="FourthPortalDecayBox"/>
+            <TextBox Height="20" x:Name="FifthPortalNameBox"/>
+            <TextBox Height="20" x:Name="FifthPortalDecayBox"/>
+            <TextBox Height="20" x:Name="SixthPortalNameBox"/>
+            <TextBox Height="20" x:Name="SixthPortalDecayBox"/>
+            <Button Height="20" x:Name="FinnishInputButton" Content="Finnish Input" Click="FinnishInputButtonClick"/>
+        </StackPanel>
+    </Grid>
 </Window>
