--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -51,6 +51,8 @@
             <TextBlock Height="20" Text="And Will Decay In:"/>
             <Button Height="20" Content="Load from file" x:Name="LoadFromFileButton" Click="LoadFromFileButtonClick"/>
             <Button Height="20" Content="save to file" x:Name="SaveToFileButton" Click="SaveToFileButtonClick"/>
+            <Button Height="20" Content="load from clipboard" x:Name="LoadFromClipboardButton" Click="LoadFromClipboardButtonClick"/>
+            <Button Height="20" Content="save to clipboard" x:Name="SaveToClipboardButton" Click="SaveToClipboardButtonClick"/>
         </StackPanel>
         <StackPanel Grid.Column="2">
             <TextBox Height="20" x:Name="ZoneNameBox"/>
